--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ authors =  [
 license = {file = "LICENSE"}
 
 dependencies = [
-    "numpy>=1.15.0,<2.0.0",
+    "numpy>=1.15.0",
     "pygtrie>=2.1,<3.0",
     "importlib-metadata<5;python_version=='3.7'",
 ]
