--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ license = {file = "LICENSE"}
 dependencies = [
     "numpy>=1.15.0",
     "pygtrie>=2.1,<3.0",
-    "importlib-metadata>5,
+    "importlib-metadata>5",
 ]
 
 [project.urls]
