--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "pyctcdecode"
 version = "0.6.0"
 description = "CTC beam search decoder for speech recognition."
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.7"
 authors =  [
     {name = "Kensho Technologies, LLC.", email = "pyctcdecode-maintainer@kensho.com"},
 ]
@@ -16,9 +16,9 @@ authors =  [
 license = {file = "LICENSE"}
 
 dependencies = [
-    "numpy>=1.15.0",
+    "numpy>=1.15.0,<3.0.0",
     "pygtrie>=2.1,<3.0",
-    "importlib-metadata>5",
+    "importlib-metadata<5;python_version=='3.7'",
 ]
 
 [project.urls]
